feat: melhora infraestrutura e configurações de observabilidade

--- a/docker/grafana/provisioning/dashboards/dashboard.yml
+++ b/docker/grafana/provisioning/dashboards/dashboard.yml
@@ -3,11 +3,12 @@ apiVersion: 1
 providers:
   - name: 'saque-pix-dashboards'
     orgId: 1
-    folder: 'Saque PIX'
+    folder: ''
     type: file
     disableDeletion: false
     editable: true
     allowUiUpdates: true
     options:
       path: /etc/grafana/provisioning/dashboards
+      foldersFromFilesStructure: false
 
