feat(security): implementa autenticação JWT real com firebase/php-jwt

--- a/composer.json
+++ b/composer.json
@@ -11,32 +11,33 @@
     "license": "MIT",
     "require": {
         "php": ">=8.2",
-        "hyperf/framework": "^3.1",
-        "hyperf/database": "^3.1",
-        "hyperf/db-connection": "^3.1",
-        "hyperf/validation": "^3.1",
-        "hyperf/logger": "^3.1",
-        "hyperf/cache": "^3.1",
-        "hyperf/redis": "^3.1",
+        "firebase/php-jwt": "^6.11",
         "hyperf/async-queue": "^3.1",
-        "hyperf/crontab": "^3.1",
-        "hyperf/config": "^3.1",
+        "hyperf/cache": "^3.1",
         "hyperf/command": "^3.1",
+        "hyperf/config": "^3.1",
         "hyperf/consul": "^3.1",
         "hyperf/contract": "^3.1",
+        "hyperf/crontab": "^3.1",
+        "hyperf/database": "^3.1",
+        "hyperf/db-connection": "^3.1",
         "hyperf/di": "^3.1",
         "hyperf/event": "^3.1",
         "hyperf/exception-handler": "^3.1",
+        "hyperf/framework": "^3.1",
         "hyperf/http-server": "^3.1",
+        "hyperf/logger": "^3.1",
         "hyperf/pool": "^3.1",
         "hyperf/process": "^3.1",
+        "hyperf/redis": "^3.1",
         "hyperf/server": "^3.1",
         "hyperf/utils": "^3.1",
+        "hyperf/validation": "^3.1",
+        "nesbot/carbon": "^2.0",
         "psr/container": "^2.0",
         "psr/event-dispatcher": "^1.0",
         "psr/log": "^3.0",
-        "ramsey/uuid": "^4.7",
-        "nesbot/carbon": "^2.0"
+        "ramsey/uuid": "^4.7"
     },
     "require-dev": {
         "hyperf/devtool": "^3.1",
